practice/security/task-3/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-3
  labels:
    mmelab.io/task: security-task-3
    mmelab.io/app: demo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mmelab.io/task: security-task-3
    mmelab.io/app: demo-app
  name: demo-app
  namespace: task-3
spec:
  replicas: 1
  selector:
    matchLabels:
      mmelab.io/task: security-task-3
      mmelab.io/app: demo-app
  template:
    metadata:
      labels:
        mmelab.io/task: security-task-3
        mmelab.io/app: demo-app
    spec:
      containers:
      - image: k8spaasclusterdesign.azurecr.io/demo-app:v0.1
        name: demo-app
        ports:
          - containerPort: 8080
            name: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    mmelab.io/task: security-task-3
    mmelab.io/app: demo-app
  name: demo-app
  namespace: task-3
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    mmelab.io/task: security-task-3
    mmelab.io/app: demo-app
  type: ClusterIP
