practice/security/task-3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ing
  labels:
    mmelab.io/task: security-task-3
    mmelab.io/app: demo-app
  namespace: task-3
spec:
  ingressClassName: nginx
  tls:
    - hosts: 
        - app-<IP>.nip.io
      secretName: app-tls-secret
  rules:
  - host: app-<IP>.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-app
            port:
              number: 8080
